--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "nodestart": "nodemon server/index.js"
+    "nodestart": "nodemon server/index.js",
+    "build": "ng build"
   },
   "keywords": [],
   "author": "",
